--- a/callback.html
+++ b/callback.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<body>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Autenticação — Supremo Tribunal de Oasis</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body style="
+  margin:0;
+  font-family: Georgia, serif;
+  background: radial-gradient(circle, #7a1c1c, #3b0d0d);
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:#2b2b2b;
+">
+
+<div style="
+  background:#f8f4ee;
+  border-radius:18px;
+  padding:28px;
+  width:320px;
+  text-align:center;
+  border:2px solid #d4af37;
+  box-shadow:0 10px 30px rgba(0,0,0,.35);
+">
+
+  <p style="margin-bottom:12px;">
+    🔐 Validando autenticação…
+  </p>
+
+  <p style="font-size:11px; color:#555;">
+    Sistema institucional — acesso monitorado
+  </p>
+
+</div>
+
 <script>
-if (!location.hash.includes("user=")) {
-  document.body.innerHTML = "<h2>Erro de autenticação</h2>";
-} else {
-  location.href = "auth.html" + location.hash;
-}
+(function () {
+  const hash = window.location.hash;
+
+  // 🔒 Hash inválido ou ausente
+  if (!hash || !hash.startsWith("#user=")) {
+    console.error("Hash de autenticação ausente ou inválido");
+    setTimeout(() => {
+      location.replace("index.html");
+    }, 1200);
+    return;
+  }
+
+  // 🔁 Repassa o payload intacto para auth.html
+  location.replace("auth.html" + hash);
+})();
 </script>
+
 </body>
 </html>
